2012-07-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.5.0

2012-06-29 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added definition of search fields, resolves #38487

2012-06-26 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Cleaned up some code, verified compatibility with TYPO3 4.7, resolves #38396

2012-06-07 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.4.0

2012-05-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added a MEDIA element type, resolves #37211

2012-04-19 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.3.0

2012-04-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Dropped usage of tx_tesseract_utilities::wrapMessage(), resolves #35602
	* Added CSH for tx_templatedisplay_displays table, resolves #9250

2012-03-21 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Fixed bug when resetting the component (reinitialized object list), resolves #35098
	* Released to TER as version 1.2.1

2012-02-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Changed static TS to use reference to lib.parseFunc_RTE, resolves #34184

2012-02-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.2.0

2012-01-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Replaced reference to parent object with new, general member variable, resolves #33051

2011-12-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>

    * Added a RECORDS element type, resolves #32430
    * Updated the manual, added an "Installation" chapter, resolves #13483

2011-12-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Improved the PAGE_STATUS function, resolves #32327
	* Corrected spelling mistake in file of class tx_templatedisplay_ajax, resolves #32335
	* Added missing documentation about EMPTY structure, resolves #32336

2011-08-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Image resource type should not override configured "file" property, resolves #29302
