@@ -1,3 +1,7 @@
+2012-09-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Corrected forcing useCacheHash configuration, resolves #41039
+
 2012-07-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Released to TER as version 1.5.0
